--- a/New/style.css
+++ b/New/style.css
@@ -730,7 +730,6 @@ u {
   color: #fff;
 }
 /* Contact Page End */
-
 /* 2026 End */
 
 /* MEDIA */
@@ -1599,9 +1598,9 @@ u {
   #home_logo_2026 img {
     width: 700px;
   }
-  #main_con_2026.ceo_page_2026 {
-    height: auto;
-  }
+  /* .elementor-location-footer{
+    position: static !important;
+  } */
   #main_con_2026 > .elementor-container {
     display: flex;
     flex-direction: column;
@@ -1634,11 +1633,13 @@ u {
     overflow: initial !important;
     position: relative !important;
   }
+  #main_con_2026.way_page_2026.private_marktse #clarity_amid_comp,
   #main_con_2026.way_page_2026.private_marktse #full_content_con_2026,
   #main_con_2026.why_page_2026.anchored_in_indeepen #full_content_con_2026,
   #main_con_2026.why_page_2026.independent_by_design #full_content_con_2026 {
     height: auto;
   }
+  #main_con_2026.way_page_2026.clarity_amid_comp > .elementor-container,
   #main_con_2026.way_page_2026.private_marktse > .elementor-container,
   #main_con_2026.why_page_2026.anchored_in_indeepen > .elementor-container,
   #main_con_2026.why_page_2026.independent_by_design > .elementor-container {
@@ -1649,6 +1650,9 @@ u {
     width: 100%;
     height: 1500px;
     margin-top: 30px;
+  }
+  #main_con_2026.way_page_2026 .way_img_title_2026 h3 {
+    font-size: 28px;
   }
   /* 2026 */
 }
@@ -1706,10 +1710,11 @@ u {
     width: 100%;
     margin-top: 60px;
   }
+  #main_con_2026.way_page_2026.clarity_amid_comp  > .elementor-container,
   #main_con_2026.way_page_2026.private_marktse > .elementor-container,
   #main_con_2026.why_page_2026.anchored_in_indeepen > .elementor-container,
   #main_con_2026.why_page_2026.independent_by_design > .elementor-container {
-    flex-direction: column;
+    flex-direction: column !important;
   }
   .why_page_2026 #scroll_col .elementor-widget-wrap,
   .way_page_2026 #scroll_col .elementor-widget-wrap {
@@ -1726,6 +1731,12 @@ u {
   }
   #black_strip_con_2026.why_img_black_strip_2026 {
     padding: 55px 40px 55px 40px;
+  }
+  #main_con_2026.way_page_2026 .way_img_title_2026 h3 {
+    font-size: 22px;
+  }
+  #main_con_2026.way_page_2026 .way_img_title_top_2026{
+    bottom: 30%;
   }
   /* 2026 */
   #scroll_col .elementor-widget-wrap {
@@ -1858,6 +1869,9 @@ u {
     .elementor-heading-title {
     font-size: 40px !important;
   }
+  #main_con_2026.way_page_2026 .way_img_title_2026 h3 {
+    font-size: 18px;
+  }
 }
 @media screen and (max-width: 1200px) and (min-height: 1550px) {
   #main_con_2026.why_page_2026.people_make_diff,
@@ -1920,6 +1934,9 @@ u {
   #main_con_2026.why_page_2026 #full_img_con_2026 {
     height: 760px;
   }
+      #main_con_2026.way_page_2026 .way_img_title_2026 h3 {
+        font-size: 16px;
+    }
   /* 2026 */
   #celebrayion_img_con .elementor-container {
     flex-wrap: wrap;
@@ -1951,35 +1968,6 @@ u {
     min-height: 100vh !important;
   }
 }
-@media screen and (max-device-width: 900px) and (orientation: landscape) {
-  #banner_art_text img {
-    width: 35%;
-  }
-  .elementor-882
-    .elementor-element.elementor-element-745d8944
-    > .elementor-element-populated {
-    padding-top: 5% !important;
-  }
-  .oxford_growth_print {
-    margin-top: 0 !important;
-  }
-  .elementor-4255 .elementor-element.elementor-element-0bdbefd {
-    padding-bottom: 10% !important;
-  }
-  .elementor-location-footer {
-    z-index: 5;
-  }
-  ul#menu-2-10cb016 {
-    /* height: 250px; */
-    overflow-x: scroll;
-  }
-  #conclusions_page {
-    padding-top: 10%;
-  }
-  #conclusions_page .elementor-widget-wrap.elementor-element-populated {
-    padding-bottom: 5%;
-  }
-}
 @media screen and (max-width: 932px) {
   .top_breadcrum_2026 {
     margin-bottom: 10px !important;
@@ -1996,6 +1984,9 @@ u {
   #main_con_2026.ceo_page_2026 #full_content_con_2026 #scroll_col img {
     width: 130px;
   }
+      #main_con_2026.way_page_2026 .way_img_title_2026 h3 {
+        font-size: 14px;
+    }
   /* 2026 */
 }
 @media screen and (max-width: 932px) and (orientation: landscape) {
@@ -2036,6 +2027,35 @@ u {
   }
   #leadership {
     padding-top: 10%;
+  }
+}
+@media screen and (max-device-width: 900px) and (orientation: landscape) {
+  #banner_art_text img {
+    width: 35%;
+  }
+  .elementor-882
+    .elementor-element.elementor-element-745d8944
+    > .elementor-element-populated {
+    padding-top: 5% !important;
+  }
+  .oxford_growth_print {
+    margin-top: 0 !important;
+  }
+  .elementor-4255 .elementor-element.elementor-element-0bdbefd {
+    padding-bottom: 10% !important;
+  }
+  .elementor-location-footer {
+    z-index: 5;
+  }
+  ul#menu-2-10cb016 {
+    /* height: 250px; */
+    overflow-x: scroll;
+  }
+  #conclusions_page {
+    padding-top: 10%;
+  }
+  #conclusions_page .elementor-widget-wrap.elementor-element-populated {
+    padding-bottom: 5%;
   }
 }
 @media screen and (max-width: 844px) {
@@ -2104,7 +2124,7 @@ u {
     margin-top: 30px;
   }
   #main_con_2026.way_page_2026 #full_img_con_2026 {
-    height: 900px;
+    height: 720px;
     margin-top: 30px;
   }
   #person_degination_con_2026 {
@@ -2214,7 +2234,15 @@ u {
   #leadership {
     padding-top: 10%;
   }
+  #main_con_2026.way_page_2026.clarity_amid_comp #full_img_con_2026 {
+        height: 880px;
+  }
   /* 2026 */
+}
+@media screen and (max-device-width: 720px){
+  #main_con_2026.way_page_2026.clarity_amid_comp #full_img_con_2026 {
+        height: 880px;
+  }
 }
 @media screen and (max-width: 668px) {
   #home_logo_2026 img {
@@ -2236,7 +2264,6 @@ u {
     padding: 8px 10px;
     font-size: 14px;
   }
-
   #main_con_2026.ceo_page_2026 #full_img_con_2026 {
     height: 560px;
     margin-bottom: 20px;
@@ -2246,7 +2273,7 @@ u {
     margin-top: 20px;
   }
   #main_con_2026.way_page_2026 #full_img_con_2026 {
-    height: 520px;
+    height: 640px;
     margin-top: 20px;
   }
   #person_degination_con_2026 {
@@ -2291,6 +2318,12 @@ u {
   }
   #menu_download_btn_2026 .elementor-button {
     padding: 13px 10px;
+  }
+  #main_con_2026.way_page_2026 .way_img_title_2026 h3 {
+        font-size: 12px;
+    }
+  #main_con_2026.way_page_2026.clarity_amid_comp #full_img_con_2026 {
+        height: 650px;
   }
   /* 2026 */
 }
@@ -2393,6 +2426,12 @@ u {
   #black_strip_con_2026.why_img_black_strip_2026 {
     padding: 30px 20px 30px 20px;
   }
+  #main_con_2026.way_page_2026 #full_img_con_2026 {
+        height: 515px;
+  }
+  #main_con_2026.way_page_2026.clarity_amid_comp #full_img_con_2026 {
+        height: 580px;
+  }
   /* 2026 */
 }
 @media screen and (max-width: 413px) {
@@ -2461,6 +2500,9 @@ u {
   }
   #main_con_2026.why_page_2026 #full_img_con_2026 {
     height: 430px;
+  }
+  #main_con_2026.way_page_2026.clarity_amid_comp #full_img_con_2026 {
+        height: 460px;
   }
   /* 2026 */
 }
