--- a/New/style.css
+++ b/New/style.css
@@ -1633,12 +1633,16 @@ u {
     overflow: initial !important;
     position: relative !important;
   }
+  /* #main_con_2026.way_page_2026.building_legacy #clarity_amid_comp, */
+  #main_con_2026.way_page_2026.supporting_family #clarity_amid_comp,
+  #main_con_2026.way_page_2026.clarity_amid_comp #clarity_amid_comp,
   #main_con_2026.way_page_2026.private_marktse #clarity_amid_comp,
-  #main_con_2026.way_page_2026.private_marktse #full_content_con_2026,
   #main_con_2026.why_page_2026.anchored_in_indeepen #full_content_con_2026,
   #main_con_2026.why_page_2026.independent_by_design #full_content_con_2026 {
     height: auto;
   }
+  /* #main_con_2026.way_page_2026.building_legacy > .elementor-container, */
+  #main_con_2026.way_page_2026.supporting_family > .elementor-container,
   #main_con_2026.way_page_2026.clarity_amid_comp > .elementor-container,
   #main_con_2026.way_page_2026.private_marktse > .elementor-container,
   #main_con_2026.why_page_2026.anchored_in_indeepen > .elementor-container,
@@ -1654,6 +1658,25 @@ u {
   #main_con_2026.way_page_2026 .way_img_title_2026 h3 {
     font-size: 28px;
   }
+  .home .elementor-location-footer,
+  .home #ofltd_main_header_2026 {
+    position: fixed;
+  }
+  .elementor-location-footer,
+  #ofltd_main_header_2026 {
+    position: static;
+  }
+
+  #contact_page,
+  #conclusions_page,
+  #leadership,
+  #main_con_2026.ceo_page_2026,
+  #main_con_2026.why_page_2026,
+  #main_con_2026.way_page_2026,
+  .page .elementor-section.elementor-section-height-full {
+    height: auto;
+  }
+
   /* 2026 */
 }
 @media screen and (max-width: 1281px) and (min-height: 1750px) {
@@ -1710,7 +1733,9 @@ u {
     width: 100%;
     margin-top: 60px;
   }
-  #main_con_2026.way_page_2026.clarity_amid_comp  > .elementor-container,
+  /* #main_con_2026.way_page_2026.building_legacy > .elementor-container, */
+  #main_con_2026.way_page_2026.supporting_family > .elementor-container,
+  #main_con_2026.way_page_2026.clarity_amid_comp > .elementor-container,
   #main_con_2026.way_page_2026.private_marktse > .elementor-container,
   #main_con_2026.why_page_2026.anchored_in_indeepen > .elementor-container,
   #main_con_2026.why_page_2026.independent_by_design > .elementor-container {
@@ -1735,7 +1760,7 @@ u {
   #main_con_2026.way_page_2026 .way_img_title_2026 h3 {
     font-size: 22px;
   }
-  #main_con_2026.way_page_2026 .way_img_title_top_2026{
+  #main_con_2026.way_page_2026 .way_img_title_top_2026 {
     bottom: 30%;
   }
   /* 2026 */
@@ -1934,9 +1959,12 @@ u {
   #main_con_2026.why_page_2026 #full_img_con_2026 {
     height: 760px;
   }
-      #main_con_2026.way_page_2026 .way_img_title_2026 h3 {
-        font-size: 16px;
-    }
+  /* #main_con_2026.way_page_2026.tax_mitigation #full_img_con_2026{
+    height: 540px;
+  } */
+  #main_con_2026.way_page_2026 .way_img_title_2026 h3 {
+    font-size: 16px;
+  }
   /* 2026 */
   #celebrayion_img_con .elementor-container {
     flex-wrap: wrap;
@@ -1984,9 +2012,9 @@ u {
   #main_con_2026.ceo_page_2026 #full_content_con_2026 #scroll_col img {
     width: 130px;
   }
-      #main_con_2026.way_page_2026 .way_img_title_2026 h3 {
-        font-size: 14px;
-    }
+  #main_con_2026.way_page_2026 .way_img_title_2026 h3 {
+    font-size: 14px;
+  }
   /* 2026 */
 }
 @media screen and (max-width: 932px) and (orientation: landscape) {
@@ -2234,14 +2262,24 @@ u {
   #leadership {
     padding-top: 10%;
   }
+  #main_con_2026.way_page_2026.finding_the_heart #full_img_con_2026,
+  #main_con_2026.way_page_2026.tax_mitigation #full_img_con_2026,
   #main_con_2026.way_page_2026.clarity_amid_comp #full_img_con_2026 {
-        height: 880px;
+    height: 880px;
+  }
+  #main_con_2026.way_page_2026.private_marktse .way_img_title_top_2026 {
+    bottom: 40%;
   }
   /* 2026 */
 }
-@media screen and (max-device-width: 720px){
+@media screen and (max-device-width: 720px) {
+  #main_con_2026.way_page_2026.finding_the_heart #full_img_con_2026,
+  #main_con_2026.way_page_2026.tax_mitigation #full_img_con_2026,
   #main_con_2026.way_page_2026.clarity_amid_comp #full_img_con_2026 {
-        height: 880px;
+    height: 880px;
+  }
+  #main_con_2026.way_page_2026.private_marktse .way_img_title_top_2026 {
+    bottom: 40%;
   }
 }
 @media screen and (max-width: 668px) {
@@ -2320,10 +2358,12 @@ u {
     padding: 13px 10px;
   }
   #main_con_2026.way_page_2026 .way_img_title_2026 h3 {
-        font-size: 12px;
-    }
+    font-size: 12px;
+  }
+  #main_con_2026.way_page_2026.finding_the_heart #full_img_con_2026,
+  #main_con_2026.way_page_2026.tax_mitigation #full_img_con_2026,
   #main_con_2026.way_page_2026.clarity_amid_comp #full_img_con_2026 {
-        height: 650px;
+    height: 650px;
   }
   /* 2026 */
 }
@@ -2426,11 +2466,13 @@ u {
   #black_strip_con_2026.why_img_black_strip_2026 {
     padding: 30px 20px 30px 20px;
   }
+  #main_con_2026.way_page_2026.finding_the_heart #full_img_con_2026,
+  #main_con_2026.way_page_2026.tax_mitigation #full_img_con_2026,
   #main_con_2026.way_page_2026 #full_img_con_2026 {
-        height: 515px;
+    height: 515px;
   }
   #main_con_2026.way_page_2026.clarity_amid_comp #full_img_con_2026 {
-        height: 580px;
+    height: 580px;
   }
   /* 2026 */
 }
@@ -2501,13 +2543,23 @@ u {
   #main_con_2026.why_page_2026 #full_img_con_2026 {
     height: 430px;
   }
+  #main_con_2026.way_page_2026.finding_the_heart #full_img_con_2026,
+  #main_con_2026.way_page_2026.tax_mitigation #full_img_con_2026,
   #main_con_2026.way_page_2026.clarity_amid_comp #full_img_con_2026 {
-        height: 460px;
+    height: 460px;
   }
   /* 2026 */
 }
 @media screen and (max-width: 361px) {
+  #main_con_2026.way_page_2026.finding_the_heart #full_img_con_2026,
   #main_con_2026.way_page_2026 #full_img_con_2026 {
     height: 440px;
+  }
+}
+@media screen and (max-width: 321px) {
+  #main_con_2026.way_page_2026 .way_img_title_top_2026 h3,
+  #main_con_2026.way_page_2026 .way_img_title_2026 h3,
+  #person_degination_con_2026 .person_degination_title_2026 h3 {
+    font-size: 9px;
   }
 }
