--- a/New/style.css
+++ b/New/style.css
@@ -893,6 +893,11 @@ u {
     font-size: 24px;
   }
 }
+@media screen and (min-width: 2561px){
+  #ceo_video_con_2026 .elementor-container{
+    max-width: 100%;
+  }
+}
 @media screen and (max-width: 2500px) {
   #heading_plus_nav #slide_nav ul li {
     width: 30px;
@@ -978,10 +983,10 @@ u {
     height: 550px;
   }
   #ceo_coin_2026 .elementor-widget-container img {
-    width: 300px;
+    width: 280px;
   }
   #ceo_video_2026 {
-    width: 530px;
+    width: 500px;
   }
   #ceo_dis_box_2026 .elementor-icon-box-title {
     font-size: 26px;
@@ -1598,9 +1603,6 @@ u {
   #home_logo_2026 img {
     width: 700px;
   }
-  /* .elementor-location-footer{
-    position: static !important;
-  } */
   #main_con_2026 > .elementor-container {
     display: flex;
     flex-direction: column;
@@ -1658,6 +1660,8 @@ u {
   #main_con_2026.way_page_2026 .way_img_title_2026 h3 {
     font-size: 28px;
   }
+  .page-id-149 .elementor-location-footer,
+  .page-id-149 #ofltd_main_header_2026 ,
   .home .elementor-location-footer,
   .home #ofltd_main_header_2026 {
     position: fixed;
@@ -1669,7 +1673,7 @@ u {
 
   #contact_page,
   #conclusions_page,
-  #leadership,
+  /* #leadership, */
   #main_con_2026.ceo_page_2026,
   #main_con_2026.why_page_2026,
   #main_con_2026.way_page_2026,
@@ -1712,6 +1716,7 @@ u {
   #main_con_2026.why_page_2026,
   #main_con_2026.way_page_2026 {
     height: auto;
+    min-height: 100vh;
   }
   #main_con_2026.ceo_page_2026 #full_content_con_2026,
   #main_con_2026.why_page_2026 #full_content_con_2026,
@@ -1915,6 +1920,10 @@ u {
   #main_con_2026.why_page_2026.independent_by_design #full_img_con_2026 {
     height: 65vh;
   }
+  #main_con_2026.way_page_2026.building_legacy #full_img_con_2026,
+  #main_con_2026.way_page_2026.turning_tax #full_img_con_2026 {
+    height: 615px;
+  }
 }
 @media screen and (max-device-width: 1200px) and (orientation: landscape) {
   .elementor-4255 .elementor-element.elementor-element-6113608,
@@ -1940,6 +1949,15 @@ u {
   #main_con_2026.way_page_2026 #full_img_con_2026 {
     height: 900px;
   }
+  #main_con_2026.way_page_2026.turning_tax #full_img_con_2026 {
+    height: 580px;
+  }
+  #main_con_2026.way_page_2026.building_legacy #full_img_con_2026 {
+    height: 615px;
+  }
+  #main_con_2026.way_page_2026.institutional_consulting #full_img_con_2026 {
+    height: 600px;
+  }
   /* 2026 */
 }
 @media screen and (max-width: 1024px) {
@@ -1959,9 +1977,9 @@ u {
   #main_con_2026.why_page_2026 #full_img_con_2026 {
     height: 760px;
   }
-  /* #main_con_2026.way_page_2026.tax_mitigation #full_img_con_2026{
-    height: 540px;
-  } */
+  #main_con_2026.way_page_2026.building_legacy #full_img_con_2026 {
+    height: 510px;
+  }
   #main_con_2026.way_page_2026 .way_img_title_2026 h3 {
     font-size: 16px;
   }
@@ -2015,6 +2033,12 @@ u {
   #main_con_2026.way_page_2026 .way_img_title_2026 h3 {
     font-size: 14px;
   }
+  #main_con_2026.way_page_2026.turning_tax #full_img_con_2026 {
+    height: 540px;
+  }
+  #main_con_2026.way_page_2026.building_legacy #full_img_con_2026 {
+    height: 470px;
+  }
   /* 2026 */
 }
 @media screen and (max-width: 932px) and (orientation: landscape) {
@@ -2045,6 +2069,10 @@ u {
   /* 2026   */
 }
 @media screen and (max-width: 900px) {
+  #main_con_2026.way_page_2026.turning_tax #full_img_con_2026 {
+    height: 450px;
+  }
+  /* 2026 */
   .elementor-287
     .elementor-element.elementor-element-de0cfbe
     .elementor-heading-title {
@@ -2090,11 +2118,20 @@ u {
   #footer_heading .elementor-heading-title {
     font-size: 12px;
   }
+  #main_con_2026.way_page_2026.turning_tax #full_img_con_2026 {
+    height: 420px;
+  }
+  #main_con_2026.way_page_2026.building_legacy #full_img_con_2026 {
+    height: 430px;
+  }
   /* 2026 */
 }
 @media screen and (max-width: 820px) {
   #home_logo_2026 img {
     width: 445px;
+  }
+  #main_con_2026.way_page_2026.building_legacy #full_img_con_2026 {
+    height: 420px;
   }
   /* 2026 */
 }
@@ -2185,6 +2222,12 @@ u {
   #scroll_col .elementor-widget-container p {
     margin-bottom: 10px;
   }
+  #main_con_2026.way_page_2026.turning_tax #full_img_con_2026 {
+    height: 400px;
+  }
+  #main_con_2026.way_page_2026.building_legacy #full_img_con_2026 {
+    height: 390px;
+  }
   /* 2026 */
   #dir_click_info .director_details {
     width: 400px;
@@ -2258,10 +2301,18 @@ u {
     order: 1;
   }
 }
+@media screen and (max-width: 740px) {
+  #main_con_2026.way_page_2026.institutional_consulting #full_img_con_2026,
+  #main_con_2026.way_page_2026.building_legacy #full_img_con_2026,
+  #main_con_2026.way_page_2026.turning_tax #full_img_con_2026 {
+    height: 885px;
+  }
+}
 @media screen and (max-device-width: 740px) and (orientation: landscape) {
   #leadership {
     padding-top: 10%;
   }
+  #main_con_2026.way_page_2026.future_proofing #full_img_con_2026,
   #main_con_2026.way_page_2026.finding_the_heart #full_img_con_2026,
   #main_con_2026.way_page_2026.tax_mitigation #full_img_con_2026,
   #main_con_2026.way_page_2026.clarity_amid_comp #full_img_con_2026 {
@@ -2273,6 +2324,7 @@ u {
   /* 2026 */
 }
 @media screen and (max-device-width: 720px) {
+  #main_con_2026.way_page_2026.future_proofing #full_img_con_2026,
   #main_con_2026.way_page_2026.finding_the_heart #full_img_con_2026,
   #main_con_2026.way_page_2026.tax_mitigation #full_img_con_2026,
   #main_con_2026.way_page_2026.clarity_amid_comp #full_img_con_2026 {
@@ -2286,6 +2338,12 @@ u {
   #home_logo_2026 img {
     width: 300px;
   }
+  #main_con_2026.way_page_2026.turning_tax #full_img_con_2026 {
+    height: 800px;
+  }
+  #main_con_2026.way_page_2026.building_legacy #full_img_con_2026 {
+    height: 790px;
+  }
 }
 @media screen and (max-width: 654px) {
   #home_logo_2026 img {
@@ -2296,8 +2354,11 @@ u {
   #home_logo_2026 img {
     width: 60%;
   }
+  #main_con_2026.way_page_2026.institutional_consulting #full_img_con_2026 {
+    height: 790px;
+  }
 }
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 541px) {
   #print_icon .pom-default:before {
     padding: 8px 10px;
     font-size: 14px;
@@ -2360,10 +2421,28 @@ u {
   #main_con_2026.way_page_2026 .way_img_title_2026 h3 {
     font-size: 12px;
   }
+  #main_con_2026.way_page_2026.future_proofing #full_img_con_2026,
   #main_con_2026.way_page_2026.finding_the_heart #full_img_con_2026,
   #main_con_2026.way_page_2026.tax_mitigation #full_img_con_2026,
   #main_con_2026.way_page_2026.clarity_amid_comp #full_img_con_2026 {
     height: 650px;
+  }
+  #main_con_2026.way_page_2026.institutional_consulting #full_img_con_2026,
+  #main_con_2026.way_page_2026.building_legacy #full_img_con_2026 {
+    height: 645px;
+  }
+  #main_con_2026.way_page_2026.tax_mitigation .way_img_title_2026 {
+    bottom: 60px;
+  }
+  #main_con_2026.way_page_2026
+    .way_img_title_top_2026
+    .elementor-widget-container,
+  #main_con_2026.way_page_2026 .way_img_title_2026 .elementor-widget-container {
+    width: max-content !important;
+    padding: 8px 16px;
+  }
+  .way_img_title_top_2026 .elementor-widget-container {
+    width: max-content !important;
   }
   /* 2026 */
 }
@@ -2373,6 +2452,9 @@ u {
   }
   #scroll_col .elementor-widget-wrap .elementor-widget-text-editor {
     font-size: 14px !important;
+  }
+  #main_con_2026.way_page_2026.turning_tax #full_img_con_2026 {
+    height: 640px;
   }
   /* 2026 */
   .ceo_icon_box
@@ -2450,9 +2532,6 @@ u {
   #leadership_img {
     min-height: 68vh !important;
   }
-  .way_img_title_top_2026 .elementor-widget-container {
-    width: max-content !important;
-  }
 }
 @media screen and (max-width: 431px) {
   .elementor-2006
@@ -2471,10 +2550,26 @@ u {
   #main_con_2026.way_page_2026 #full_img_con_2026 {
     height: 515px;
   }
+  #main_con_2026.way_page_2026.institutional_consulting #full_img_con_2026,
   #main_con_2026.way_page_2026.clarity_amid_comp #full_img_con_2026 {
     height: 580px;
   }
+  #main_con_2026.way_page_2026.future_proofing #full_img_con_2026,
+  #main_con_2026.way_page_2026.turning_tax #full_img_con_2026 {
+    height: 510px;
+  }
+  #main_con_2026.way_page_2026.building_legacy #full_img_con_2026 {
+    height: 515px;
+  }
+  #main_con_2026.way_page_2026.tax_mitigation .way_img_title_2026 {
+    bottom: 40px;
+  }
   /* 2026 */
+}
+@media screen and (max-width: 415px) {
+  #main_con_2026.way_page_2026.building_legacy #full_img_con_2026 {
+    height: 490px;
+  }
 }
 @media screen and (max-width: 413px) {
   #person_degination_con_2026 .person_degination_title_2026 h5 {
@@ -2543,17 +2638,31 @@ u {
   #main_con_2026.why_page_2026 #full_img_con_2026 {
     height: 430px;
   }
+  #main_con_2026.way_page_2026.turning_tax #full_img_con_2026,
+  #main_con_2026.way_page_2026.future_proofing #full_img_con_2026,
   #main_con_2026.way_page_2026.finding_the_heart #full_img_con_2026,
   #main_con_2026.way_page_2026.tax_mitigation #full_img_con_2026,
   #main_con_2026.way_page_2026.clarity_amid_comp #full_img_con_2026 {
     height: 460px;
   }
+  #main_con_2026.way_page_2026.tax_mitigation .way_img_title_2026 {
+    bottom: 25px;
+  }
+  #main_con_2026.way_page_2026.institutional_consulting #full_img_con_2026,
+  #main_con_2026.way_page_2026.building_legacy #full_img_con_2026 {
+    height: 467px;
+  }
   /* 2026 */
 }
 @media screen and (max-width: 361px) {
+  #main_con_2026.way_page_2026.institutional_consulting #full_img_con_2026,
+  #main_con_2026.way_page_2026.future_proofing #full_img_con_2026,
   #main_con_2026.way_page_2026.finding_the_heart #full_img_con_2026,
   #main_con_2026.way_page_2026 #full_img_con_2026 {
     height: 440px;
+  }
+  #main_con_2026.way_page_2026.building_legacy #full_img_con_2026 {
+    height: 430px;
   }
 }
 @media screen and (max-width: 321px) {
@@ -2561,5 +2670,10 @@ u {
   #main_con_2026.way_page_2026 .way_img_title_2026 h3,
   #person_degination_con_2026 .person_degination_title_2026 h3 {
     font-size: 9px;
+  }
+  #main_con_2026.way_page_2026.institutional_consulting #full_img_con_2026,
+  #main_con_2026.way_page_2026.future_proofing #full_img_con_2026,
+  #main_con_2026.way_page_2026.turning_tax #full_img_con_2026 {
+    height: 390px;
   }
 }
