--- a/New/style.css
+++ b/New/style.css
@@ -728,6 +728,9 @@ u {
   #scroll_col .elementor-widget-wrap {
     height: 1020px;
   }
+  #conclusions_page #scroll_col .elementor-widget-wrap {
+    height: 1250px;
+  }
   /* 2026 */
   #print-section {
     margin-top: -3150px;
@@ -816,6 +819,9 @@ u {
   }
   #heading_2026 h1 {
     font-size: 50px !important;
+  }
+  #conclusions_page #scroll_col .elementor-widget-wrap {
+    height: 850px;
   }
   /* 2026 */
   #print_icon .pom-default:before {
@@ -993,6 +999,9 @@ u {
   #main_con_2026.ceo_page_2026 #full_img_con_2026,
   #main_con_2026.way_page_2026 #full_img_con_2026 {
     width: 35%;
+  }
+  #conclusions_page #conclusions_page_main_col > .elementor-widget-wrap {
+    padding-top: 2%;
   }
   /* 2026 */
   section#leadership_img {
@@ -1656,20 +1665,21 @@ u {
     position: static;
   }
 
-  #contact_page,  
+  #contact_page,
   #main_con_2026.ceo_page_2026,
   #main_con_2026.why_page_2026,
   #main_con_2026.way_page_2026,
   .page .elementor-section.elementor-section-height-full {
     height: auto;
   }
-  #conclusions_page{
+  #contact_page,
+  #conclusions_page {
     min-height: 100vh;
     height: 100%;
   }
   #conclusions_page #scroll_col .elementor-widget-wrap {
-        height: inherit;
-    }
+    height: inherit;
+  }
   #leadership
     > .elementor-container
     > .elementor-column
@@ -1680,17 +1690,23 @@ u {
     min-height: 45vh !important;
     width: 100% !important;
   }
-  #leadership #heading_plus_nav #leadership_heading h1{
+  #leadership #heading_plus_nav #leadership_heading h1 {
     text-align: center !important;
     background: rgba(255, 255, 255, 0.7);
     padding: 10px 20px !important;
     display: inline-block;
   }
-  #leadership #heading_plus_nav .top_breadcrum_2026.leadership_breadcrum p{
+  #leadership #heading_plus_nav .top_breadcrum_2026.leadership_breadcrum p {
     text-align: center !important;
     background: rgba(255, 255, 255, 0.7);
     padding: 20px 20px !important;
     display: inline-block;
+  }
+  #contact_page .Contact_box .Contact_content_con {
+    width: 55%;
+  }
+  #contact_page .Contact_box .Contact_img_con {
+    width: 45%;
   }
   /* 2026 */
 }
@@ -1790,12 +1806,26 @@ u {
     padding: 10px 30px;
   }
   #leadership #heading_plus_nav #leadership_heading h1,
-  #leadership #heading_plus_nav .top_breadcrum_2026.leadership_breadcrum p{
+  #leadership #heading_plus_nav .top_breadcrum_2026.leadership_breadcrum p {
     background: rgba(255, 255, 255, 0.7);
     padding: 10px 20px;
     display: inline-block;
     margin-bottom: 15px !important;
   }
+  #conclusions_page #scroll_col .elementor-widget-wrap {
+    height: auto;
+  }
+  #conclusions_page #conclusions_page_main_col > .elementor-widget-wrap {
+    padding-top: 37%;
+    padding-bottom: 30%;
+  }
+  #contact_page .Contact_box .Contact_content_con {
+    width: 54%;
+  }
+  #contact_page .Contact_box .Contact_img_con {
+    width: 46%;
+  }
+
   /* 2026 */
   #scroll_col .elementor-widget-wrap {
     height: inherit;
@@ -2025,6 +2055,18 @@ u {
   #leadership_img {
     min-height: 57vh !important;
   }
+  #contact_page .Contact_box .Contact_img_con {
+    width: 54%;
+  }
+  #contact_page .Contact_box .Contact_content_con {
+    width: 46%;
+  }
+  #contact_page
+    .Contact_box.Contact_box_right
+    .Contact_content_con
+    > .elementor-widget-wrap {
+    padding-left: 25%;
+  }
   /* 2026 */
 }
 @media screen and (max-width: 1024px) and (min-height: 1360px) {
@@ -2091,6 +2133,18 @@ u {
   }
   #main_con_2026.way_page_2026.building_legacy #full_img_con_2026 {
     height: 470px;
+  }
+  #contact_page .Contact_box .Contact_img_con {
+    width: 60%;
+  }
+  #contact_page .Contact_box .Contact_content_con {
+    width: 40%;
+  }
+  #contact_page
+    .Contact_box.Contact_box_right
+    .Contact_content_con
+    > .elementor-widget-wrap {
+    padding-left: 10%;
   }
   /* 2026 */
 }
@@ -2187,12 +2241,9 @@ u {
     /* height: 250px; */
     overflow-x: scroll;
   }
-  #conclusions_page {
-    padding-top: 10%;
-  }
-  #conclusions_page .elementor-widget-wrap.elementor-element-populated {
+  /* #conclusions_page .elementor-widget-wrap.elementor-element-populated {
     padding-bottom: 5%;
-  }
+  } */
   #leadership {
     height: 100%;
   }
@@ -2207,6 +2258,25 @@ u {
   #main_con_2026.way_page_2026.building_legacy #full_img_con_2026 {
     height: 430px;
   }
+  #contact_page .Contact_box .Contact_img_con {
+    width: 65%;
+  }
+  #contact_page .Contact_box .Contact_content_con {
+    width: 35%;
+  }
+  #contact_page .Contact_box.Contact_box_left .Contact_content_con {
+    padding-left: 15px;
+  }
+  #contact_page
+    .Contact_box.Contact_box_right
+    .Contact_content_con
+    > .elementor-widget-wrap {
+    padding-left: 0;
+    padding-right: 15px;
+  }
+  #contact_page .Contact_box .Contact_content_con .Contact_content_dis {
+    font-size: 10px;
+  }
   /* 2026 */
 }
 @media screen and (max-width: 820px) {
@@ -2217,14 +2287,23 @@ u {
     height: 420px;
   }
   #leadership_img {
-        min-height: 45vh !important;
-    }
+    min-height: 45vh !important;
+  }
+  #contact_page .Contact_box.Contact_box_left .Contact_content_con {
+    padding-right: 5px;
+  }
+  #contact_page
+    .Contact_box.Contact_box_right
+    .Contact_content_con
+    > .elementor-widget-wrap {
+    padding-left: 5px;
+  }
   /* 2026 */
 }
-@media screen and (max-width: 800px){
+@media screen and (max-width: 800px) {
   #leadership_img {
-        min-height: 40vh !important;
-    }
+    min-height: 40vh !important;
+  }
 }
 @media screen and (max-width: 800px) and (min-height: 1270px) {
   #main_con_2026.why_page_2026 #full_img_con_2026 {
@@ -2319,6 +2398,27 @@ u {
   #main_con_2026.way_page_2026.building_legacy #full_img_con_2026 {
     height: 390px;
   }
+  #conclusions_page #conclusions_page_main_col > .elementor-widget-wrap {
+    padding-top: 45%;
+    padding-bottom: 45%;
+  }
+  #contact_page .Contact_box .Contact_content_con,
+  #contact_page .Contact_box .Contact_img_con {
+    width: 50%;
+  }
+  #contact_page .Contact_box .Contact_content_con .Contact_content_dis {
+    font-size: 12px;
+  }
+  #contact_page
+    .Contact_box.Contact_box_right
+    .Contact_content_con
+    > .elementor-widget-wrap {
+    padding-left: 15px;
+    padding-right: 5px;
+  }
+  #contact_page .elementor-container {
+    align-items: center;
+  }
   /* 2026 */
   #dir_click_info .director_details {
     width: 400px;
@@ -2349,9 +2449,9 @@ u {
     > .elementor-widget-container {
     padding-left: 7% !important;
   }
-  .elementor-782 .elementor-element.elementor-element-1b288c84 {
+  /* .elementor-782 .elementor-element.elementor-element-1b288c84 {
     padding-top: 10% !important;
-  }
+  } */
   .elementor-container.elementor-column-gap-default {
     flex-wrap: wrap;
   }
@@ -2462,6 +2562,9 @@ u {
   #main_con_2026.way_page_2026.institutional_consulting #full_img_con_2026 {
     height: 790px;
   }
+  #contact_page .Contact_box .Contact_content_con .Contact_content_dis {
+    font-size: 10px;
+  }
 }
 @media screen and (max-width: 541px) {
   #print_icon .pom-default:before {
@@ -2559,6 +2662,12 @@ u {
   }
   #dir_click_info .director_details h3 {
     font-size: 12px;
+  }
+  #contact_page .Contact_box .Contact_content_con {
+    width: 40%;
+  }
+  #contact_page .Contact_box .Contact_img_con {
+    width: 60%;
   }
   /* 2026 */
 }
@@ -2692,6 +2801,36 @@ u {
   #heading_plus_nav #slide_nav ul li.active {
     border-color: #fff;
   }
+  #contact_page_main_col > .elementor-widget-wrap {
+    padding: 0 20px;
+  }
+  #contact_page .elementor-container {
+    flex-direction: column;
+  }
+  #contact_page .Contact_box .Contact_content_con {
+    width: 100%;
+    margin-bottom: 15px;
+    padding: 0 !important;
+  }
+  #contact_page .Contact_box.Contact_box_right .Contact_content_con > .elementor-widget-wrap{
+    padding: 0 !important;
+  }
+  #contact_page .Contact_box .Contact_img_con {
+    width: 100%;
+    margin-bottom: 15px;
+  }
+  #contact_page
+    #contact_page_main_col
+    .elementor-element
+    .elementor-widget-container {
+    padding-left: 0 !important;
+  }
+  #contact_page .Contact_box .Contact_content_con .Contact_content_heading h3 {
+        font-size: 20px;
+    }
+    #contact_page .Contact_box .Contact_content_con .Contact_content_dis {
+        font-size: 14px;
+    }
   /* 2026 */
 }
 @media screen and (max-width: 415px) {
